--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		<div class="logo">
 			<!-- In the img folder, upload your logo -->
 			<!-- Make sure you name it 'logo.png' -->
-			<a href="https://ifactions.tk/">
+			<a href="http://ifactions.tk/">
 			<img src="img/logo.png" alt="iFactions logo">
 		</div>
 		
@@ -66,7 +66,7 @@
 			</a>
 			
 			<!-- Replace # with your vote URL -->
-			<a href="https://discord.ifactions.tk/" class="item discord">
+			<a href="http://ifactions.tk/discord" class="item discord">
 			<div>
 				<img src="img/discord.png" alt="Discord icon" class="img">
 				<p class="subtitle">připoj se na náš discord</p>
@@ -75,7 +75,7 @@
 
 			</a>
 			<!-- Replace # with your vote URL -->
-			<a href="https://prezentace.ifactions.tk/" class="item prezentace" target="_blank">
+			<a href="http://ifactions.tk/prezentace" class="item prezentace" target="_blank">
 			<div>
 				<img src="img/prezentace.png" alt="Dynmap icon" class="img">
 				<p class="subtitle">prezentace serveru</p>
@@ -85,7 +85,7 @@
 			
 			</a>
 			<!-- Replace # with your vote URL -->
-			<a href="http://dynmap.ifactions.tk/" class="item dynmap" target="_blank">
+			<a href="http://ifactions.tk/dynmap" class="item dynmap" target="_blank">
 			<div>
 				<img src="img/dynmap.png" alt="Dynmap icon" class="img">
 				<p class="subtitle">živá mapa serveru</p>
