--- a/prezentace/en.html
+++ b/prezentace/en.html
@@ -47,11 +47,11 @@
       </div>
       <div class="nadpis">iFactions Network</div>
       <div class="navigace">
-        <a href="https://ifactions.tk/" id="fb" target="_blank"> <div class="nav-option">Web</div></a>
-        <a href="https://discord.ifactions.tk" id="dc" target="_blank">             <div class="nav-option">Discord</div></a>
+        <a href="http://ifactions.tk/" id="fb" target="_blank"> <div class="nav-option">Web</div></a>
+        <a href="http://ifactions.tk/discord" id="dc" target="_blank">             <div class="nav-option">Discord</div></a>
         <a href="https://www.facebook.com/iFactions" id="reg" target="_blank">      <div class="nav-option">Facebook</div></a>
         <a href="https://www.instagram.com/ifactionspvp/" id="dl" target="_blank">       <div class="nav-option">Instagram</div></a>
-        <a href="http://dynmap.ifactions.tk/" id="w" target="_blank">                 <div class="nav-option">Dynmap</div></a>
+        <a href="http://ifactions.tk/dynmap" id="w" target="_blank">                 <div class="nav-option">Dynmap</div></a>
 		<a href="https://youtu.be/v7nWenLzfag" id="w" target="_blank">                 <div class="nav-option">Video tutorial</div></a>
       </div>
     </header>
