--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 		<div class="logo">
 			<!-- In the img folder, upload your logo -->
 			<!-- Make sure you name it 'logo.png' -->
-			<a href="http://ifactions.tk/">
+			<a href="http://ifactions-network.tk/">
 			<img src="img/logo.png" alt="iFactions logo">
 		</div>
 		
 		<!--<iframe src="https://player.vimeo.com/video/528503622?autoplay=1&color=9932cc&title=0&byline=0&portrait=0" width="678" height="381" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>-->
-		<iframe width="678" height="381" src="https://www.youtube.com/embed/JrBiWjIbYHI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<iframe width="678" height="381" src="https://youtu.be/iBrDUqcHJus" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		
 		<div class="items">
 			<!-- Replace # with your forum URL-->
@@ -66,7 +66,7 @@
 			</a>
 			
 			<!-- Replace # with your vote URL -->
-			<a href="http://ifactions.tk/discord" class="item discord">
+			<a href="http://ifactions-network.tk/discord" class="item discord">
 			<div>
 				<img src="img/discord.png" alt="Discord icon" class="img">
 				<p class="subtitle">připoj se na náš discord</p>
@@ -75,7 +75,7 @@
 
 			</a>
 			<!-- Replace # with your vote URL -->
-			<a href="http://ifactions.tk/prezentace" class="item prezentace" target="_blank">
+			<a href="http://ifactions-network.tk/prezentace" class="item prezentace" target="_blank">
 			<div>
 				<img src="img/prezentace.png" alt="Dynmap icon" class="img">
 				<p class="subtitle">prezentace serveru</p>
@@ -85,7 +85,7 @@
 			
 			</a>
 			<!-- Replace # with your vote URL -->
-			<a href="http://ifactions.tk/dynmap" class="item dynmap" target="_blank">
+			<a href="http://ifactions-network.tk/dynmap" class="item dynmap" target="_blank">
 			<div>
 				<img src="img/dynmap.png" alt="Dynmap icon" class="img">
 				<p class="subtitle">živá mapa serveru</p>
@@ -110,7 +110,7 @@
 			<!-- Do it for both examples below -->
 			<!-- Please set both your IP and port -->
 			<p>Připoj se k <span class="sip" data-ip="95.216.97.219" data-port="35525">
-			0</span> hráčům na <span class="ip">play.ifactions.tk</span></p>
+			0</span> hráčům na <span class="ip">riot-network.tk</span></p>
 		</div>
 			<p class="subtitle">kliknutím na IP ji zkopíruješ</p>
 	</div>
