--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 		</div>
 		
 		<!--<iframe src="https://player.vimeo.com/video/528503622?autoplay=1&color=9932cc&title=0&byline=0&portrait=0" width="678" height="381" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen></iframe>-->
-		<iframe width="678" height="381" src="https://youtu.be/iBrDUqcHJus" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<iframe width="678" height="381" src="https://www.youtube.com/embed/iBrDUqcHJus" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		
 		<div class="items">
 			<!-- Replace # with your forum URL-->
@@ -110,7 +110,7 @@
 			<!-- Do it for both examples below -->
 			<!-- Please set both your IP and port -->
 			<p>Připoj se k <span class="sip" data-ip="95.216.97.219" data-port="35525">
-			0</span> hráčům na <span class="ip">riot-network.tk</span></p>
+			0</span> hráčům na <span class="ip">riot-network.ga</span></p>
 		</div>
 			<p class="subtitle">kliknutím na IP ji zkopíruješ</p>
 	</div>
