--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 			<!-- Replace play.myserver.net with your IP address -->
 			<!-- Do it for both examples below -->
 			<!-- Please set both your IP and port -->
-			<p>Připoj se k <span class="sip" data-ip="95.216.97.219" data-port="35525">
+			<p>Připoj se k <span class="sip" data-ip="riot-network.ga" data-port="25565">
 			0</span> hráčům na <span class="ip">riot-network.ga</span></p>
 		</div>
 			<p class="subtitle">kliknutím na IP ji zkopíruješ</p>
