--- a/prezentace/en.html
+++ b/prezentace/en.html
@@ -47,11 +47,11 @@
       </div>
       <div class="nadpis">iFactions Network</div>
       <div class="navigace">
-        <a href="http://ifactions.tk/" id="fb" target="_blank"> <div class="nav-option">Web</div></a>
-        <a href="http://ifactions.tk/discord" id="dc" target="_blank">             <div class="nav-option">Discord</div></a>
+        <a href="http://ifactions-network.tk/" id="fb" target="_blank"> <div class="nav-option">Web</div></a>
+        <a href="http://ifactions-network.tk/discord" id="dc" target="_blank">             <div class="nav-option">Discord</div></a>
         <a href="https://www.facebook.com/iFactions" id="reg" target="_blank">      <div class="nav-option">Facebook</div></a>
         <a href="https://www.instagram.com/ifactionspvp/" id="dl" target="_blank">       <div class="nav-option">Instagram</div></a>
-        <a href="http://ifactions.tk/dynmap" id="w" target="_blank">                 <div class="nav-option">Dynmap</div></a>
+        <a href="http://ifactions-network.tk/dynmap" id="w" target="_blank">                 <div class="nav-option">Dynmap</div></a>
 		<a href="https://youtu.be/v7nWenLzfag" id="w" target="_blank">                 <div class="nav-option">Video tutorial</div></a>
       </div>
     </header>
@@ -372,12 +372,12 @@
 
       <footer>
         <p class="zapati">
-          All rights reserved by iFactions.tk<br>
-          © Copyright by iFactions.tk 2020
+          All rights reserved by ifactions-network.tk<br>
+          © Copyright by ifactions-network.tk 2020
         </p>
         <div class="zapati3">Number of visits: <span id="counter"></span></div>
         <p class="zapati2">
-          Developed by iFactions.tk<br>
+          Developed by ifactions-network.tk<br>
           Designed by <span id="autor">TroubleMaker</span><br>
         </p>
       </footer>
