--- a/prezentace/index.html
+++ b/prezentace/index.html
@@ -8,11 +8,11 @@
     <header>
       <div class="nadpis">iFactions Network</div>
       <div class="navigace">
-        <a href="http://ifactions.tk/" id="fb" target="_blank"> <div class="nav-option">Web</div></a>
-        <a href="http://ifactions.tk/discord" id="dc" target="_blank">             <div class="nav-option">Discord</div></a>
+        <a href="http://ifactions-network.tk/" id="fb" target="_blank"> <div class="nav-option">Web</div></a>
+        <a href="http://ifactions-network.tk/discord" id="dc" target="_blank">             <div class="nav-option">Discord</div></a>
         <a href="https://www.facebook.com/iFactions" id="reg" target="_blank">      <div class="nav-option">Facebook</div></a>
         <a href="https://www.instagram.com/ifactionspvp/" id="dl" target="_blank">       <div class="nav-option">Instagram</div></a>
-        <a href="http://ifactions.tk/dynmap" id="w" target="_blank">                 <div class="nav-option">Dynmap</div></a>
+        <a href="http://ifactions-network.tk/dynmap" id="w" target="_blank">                 <div class="nav-option">Dynmap</div></a>
 		<a href="https://youtu.be/v7nWenLzfag" id="w" target="_blank">                 <div class="nav-option">Video tutorial</div></a>
       </div>
       <div class="nadpis" id="chooselang">Choose language</div>      
